--- a/index.html
+++ b/index.html
@@ -1,53 +1,55 @@
+
+<!-- Shift+Alt+A -Comentarios Css, JavaScript- -->
 <!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/style.css">
     <!-- Agrega CSS al HTML -->
-    <title>Sing up for Schoology account</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <title>Sign up for a Schoology Account</title>
 </head>
 <body>
+
     <header class="navbar">
-        <nav>
-            <div>
-                <a href="http://www.schoology.com/" target="blank">
-                    <img class="Logo" src="img/Schoology.png" alt="Schoology logo" > 
-                </a>
+        <nav> 
+            <div>       
+                <a href="http://www.schoology.com/" target="blank"><img class="logo" src="img/logoschool.png" alt="Schoology" > </a>
             </div>
         </nav>
     </header>
-    <main class="main-page">
-        <section>
-            <div class="title-form">
-                <div>
-                    <span>Sing up for Schoology</span>
-                </div>
-                <div>
-                    <a href="https://app.schoology.com/register.php" target="blank">Back</a>
-                </div>
 
+    <main class="main-page">
+        <section> 
+            <div class="tittle-form">
+                    <span>Sign up for Schoology</span>
+                    <a href="http://app.schoology.com/register.php" target="blank">Back</a>
             </div>
-            <div class="text-area">
-                <input type="text" name="code" placeholder="Access Code">
+
+            <div class="input-access">
+                <input type="text" name="Access code" id="" placeholder="Access Code">            
+                <span>Enter the access code provided by your instructor</span>
             </div>
-            <div class="description">
-                <span> Enter the access code provided by your instructor</span>
-            </div>
-            <div class="buttom">
-                <input type="submit" name="op" value="Continue" />
-            </div>
+
+            <button>  
+                    Continue
+            </button>
         </section>
     </main>
-    <footer>
-        <span>Schoology &copy; 2022</span>
-        <span> · </span>
-        <a href="https://www.powerschool.com/privacy" class="privacy">PRIVACY POLICY</a>
-        <span> · </span>
-        <a href="https://www.schoology.com/terms-of-use">Terms of Use</a>
-        <span> · </span>
-        <a href="https://support.schoology.com/hc/en-us">Help Center</a>
-    </footer>   
+
+    <footer class="page-footer">
+        <nav>
+                <span>Schoology © 2022 </span>
+                <span class="divider">·</span>
+                <a class="privacy-pol" href="https://www.powerschool.com/privacy" target="blank">PRIVACY POLICY</a> 
+                <span class="divider">·</span>
+                <a class="terms-of-use" href="https://www.schoology.com/terms-of-use" target="blank">Terms of Use</a> 
+                <span class="divider">·</span>
+                <a class="help-center" href="https://support.schoology.com/hc/en-us" target="blank">Help Center</a>
+            </nav>
+    </footer>
+
 </body>
+
 </html>
