--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Agrega CSS al HTML -->
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="CSS/style.css">
     <title>Sign up for a Schoology Account</title>
 </head>
 <body>
@@ -15,7 +15,7 @@
     <header class="navbar">
         <nav> 
             <div>       
-                <a href="http://www.schoology.com/" target="blank"><img class="logo" src="img/logoschool.png" alt="Schoology" > </a>
+                <a href="http://www.schoology.com/" target="blank"><img class="logo" src="img/Schoology.png" alt="Schoology" > </a>
             </div>
         </nav>
     </header>
